# iree

compiler/src/iree/compiler/API/Internal/: BUILD.bazel  CMakeLists.txt  IREEReduceToolEntryPoint.cpp
compiler/src/iree/compiler/Codegen/Common/: BUILD.bazel  CMakeLists.txt  LowerExecutableUsingTransformDialect.cpp  OptimizeTensorInsertExtractSlices.cpp  PassUtils.h  Passes.h  Passes.td  ReconcileTranslationInfo.cpp  TileSizeSelection.cpp  VectorLayoutAnalysis.cpp
compiler/src/iree/compiler/Codegen/LLVMCPU/: LLVMCPULowerExecutableTarget.cpp  Passes.cpp  Passes.h  Passes.td
compiler/src/iree/compiler/Codegen/LLVMGPU/: AMDGPUChainedMatmulPass.cpp  KernelConfig.cpp  LLVMGPUCastTypeToFitMMA.cpp  LLVMGPUConfigureTensorLayouts.cpp  LLVMGPUSelectLoweringStrategy.cpp  LLVMGPUVectorDistribute.cpp  Passes.cpp  Passes.h  Passes.td  ROCDLKernelConfig.cpp
compiler/src/iree/compiler/Codegen/SPIRV/: ConvertToSPIRVPass.cpp  KernelConfig.cpp  Passes.cpp  Passes.h  Passes.td  SPIRVSelectLoweringStrategy.cpp  SPIRVTileAndPromote.cpp
compiler/src/iree/compiler/Codegen/Utils/: Utils.cpp
compiler/src/iree/compiler/GlobalOptimization/: FuseHorizontalContractions.cpp
compiler/src/iree/compiler/Reducer/: BUILD.bazel  CMakeLists.txt  ChunkManager.cpp  ChunkManager.h  Delta.cpp  DeltaStratergies.h  Oracle.cpp  ReduceFlowDispatchDelta.cpp  WorkItem.cpp  WorkItem.h  iree_reduce_lib.cc  iree_reduce_lib.h
compiler/src/iree/compiler/Reducer/Strategies/: BUILD.bazel  CMakeLists.txt  EliminateDispatches.cpp  PassDetail.h  Passes.h  Passes.td  Strategies.h
(+89 files in other folders)
